--- a/proyectoADS/Vistas/css/estilos.css
+++ b/proyectoADS/Vistas/css/estilos.css
@@ -1,96 +1,111 @@
-*{
-	margin: 0;
-	padding: 0;
-}
-
-nav{
-	position:relative;
-	margin:auto;
-	width:100%;
-	height:auto;
-	background:gray;
-}
-
-nav ul{
-	position:relative;
-	margin:auto;
-	width:50%;
-	text-align: center;
-}
-
-nav ul li{
-	display:inline-block;
-	width:24%;
-	line-height: 50px;
-	list-style: none;
-}
-
-nav ul li a{
-	color:white;
-	text-decoration: none;
-	font-size: 10px;
-}
-
-nav ul li a:hover{
-	color:rgb(224, 6, 6);
-}
-
-section{
-	position: relative;
-	margin: auto;
-	width:400px;
-}
-
-section h1{
-	position: relative;
-	margin: auto;
-	padding:10px;
-	text-align: center;
-}
-
-section form{
-	position:relative;
-	margin:auto;
-	width:400px;
-}
-
-section form input{
-	display:inline-block;
-	padding:10px;
-	width:95%;
-	margin:5px;
-}
-
-section form input[type="submit"]{
-	position:relative;
-	margin:20px auto;
-	left:4.5%;
-
-}
-
-table{
-	position:relative;
-	margin:auto;
-	width:100%;
-}
-
-table#t1{
-	left:-25%;
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Poppins&display=swap');
+	*{
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		font-family: 'Montserrat Alternates', sans-serif;
+	}
 
 
-table thead tr th{
-	padding:10px;
-}
+	/*Estilos para el encabezado*/
+	.header{
+		width: 100%;
+		height: 100px;
+		position: fixed;
+		top: 0;left: 0;
+	}
+	.container{
+		width: 90%;
+		max-width: 1200px;
+		margin: auto;
+	}
+	.container .btn-menu, .logo{
+		float: left;
+		line-height:100px;
+	}
+	.container .btn-menu label{
+		color:black;
+		font-size: 25px;
+		cursor: pointer;
+	}
+	.logo h1{
+		color: black;
+		font-weight: 400;
+		font-size: 22px;
+		margin-left: 10px;
+	}
+	.container .menu{
+		float: right;
+		line-height: 100px;
+	}
+	.container .menu a{
+		display: inline-block;
+		padding: 15px;
+		line-height: normal;
+		text-decoration: none;
+		color: black;
+		transition: all 0.3s ease;
+		border-bottom: 2px solid transparent;
+		font-size: 15px;
+		margin-right: 5px;
+	}
+	.container .menu a:hover{
+		border-bottom: 2px solid black;
+		padding-bottom: 5px;
+	}
+	/*Fin de Estilos para el encabezado*/
 
-table tbody tr td{
-	padding:10px;
-}
-
-.modal {
-	max-height: 90%;
-  }
-  
-.modal-form-row {
-	margin-bottom: 0px;
-  }
+	/*Menù lateral*/
+	#btn-menu{
+		display: none;
+	}
+	.container-menu{
+		position: absolute;
+		background: rgba(0,0,0,0.5);
+		width: 100%;
+		height: 100vh;
+		top: 0;left: 0;
+		transition: all 500ms ease;
+		opacity: 0;
+		visibility: hidden;
+	}
+	#btn-menu:checked ~ .container-menu{
+		opacity: 1;
+		visibility: visible;
+	}
+	.cont-menu{
+		width: 100%;
+		max-width: 250px;
+		background: #1c1c1c;
+		height: 100vh;
+		position: relative;
+		transition: all 500ms ease;
+		transform: translateX(-100%);
+	}
+	#btn-menu:checked ~ .container-menu .cont-menu{
+		transform: translateX(0%);
+	}
+	.cont-menu nav{
+		transform: translateY(15%);
+	}
+	.cont-menu nav a{
+		display: block;
+		text-decoration: none;
+		padding: 20px;
+		color: #c7c7c7;
+		border-left: 5px solid transparent;
+		transition: all 400ms ease;
+	}
+	.cont-menu nav a:hover{
+		border-left: 5px solid #c7c7c7;
+		background: #1f1f1f;
+	}
+	.cont-menu label{
+		position: absolute;
+		right: 5px;
+		top: 10px;
+		color: #fff;
+		cursor: pointer;
+		font-size: 18px;
+	}
+	/*Fin de Menù lateral*/
